# my_first_cmake_cpp_application

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Objects/: baseobject.cpp  baseobject.h
